// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform: <GroupByLabelForm /> Date histogram aggregation 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem
    className="transform__GroupByLabel--text"
  >
    <span
      className="eui-textTruncate"
      data-test-subj="transformGroupByEntryLabel"
    >
      the-group-by-agg-name
    </span>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--text transform__GroupByLabel--interval"
    grow={false}
  >
    <EuiTextColor
      className="eui-textTruncate"
      color="subdued"
      data-test-subj="transformGroupByEntryIntervalLabel"
    >
      1m
    </EuiTextColor>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--button"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downCenter"
      button={
        <EuiButtonIcon
          aria-label="Edit interval"
          data-test-subj="transformGroupByEntryEditButton"
          iconType="pencil"
          onClick={[Function]}
          size="s"
        />
      }
      closePopover={[Function]}
      display="inlineBlock"
      hasArrow={true}
      id="transformIntervalFormPopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="m"
    >
      <PopoverForm
        defaultData={
          Object {
            "agg": "date_histogram",
            "aggName": "the-group-by-agg-name",
            "calendar_interval": "1m",
            "dropDownName": "the-group-by-drop-down-name",
            "field": "the-group-by-field",
          }
        }
        onChange={[Function]}
        options={Object {}}
        otherAggNames={Array []}
      />
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--button"
    grow={false}
  >
    <EuiButtonIcon
      aria-label="Delete item"
      data-test-subj="transformGroupByEntryDeleteButton"
      iconType="cross"
      onClick={[Function]}
      size="s"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Transform: <GroupByLabelForm /> Histogram aggregation 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem
    className="transform__GroupByLabel--text"
  >
    <span
      className="eui-textTruncate"
      data-test-subj="transformGroupByEntryLabel"
    >
      the-group-by-agg-name
    </span>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--text transform__GroupByLabel--interval"
    grow={false}
  >
    <EuiTextColor
      className="eui-textTruncate"
      color="subdued"
      data-test-subj="transformGroupByEntryIntervalLabel"
    >
      100
    </EuiTextColor>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--button"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downCenter"
      button={
        <EuiButtonIcon
          aria-label="Edit interval"
          data-test-subj="transformGroupByEntryEditButton"
          iconType="pencil"
          onClick={[Function]}
          size="s"
        />
      }
      closePopover={[Function]}
      display="inlineBlock"
      hasArrow={true}
      id="transformIntervalFormPopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="m"
    >
      <PopoverForm
        defaultData={
          Object {
            "agg": "histogram",
            "aggName": "the-group-by-agg-name",
            "dropDownName": "the-group-by-drop-down-name",
            "field": "the-group-by-field",
            "interval": "100",
          }
        }
        onChange={[Function]}
        options={Object {}}
        otherAggNames={Array []}
      />
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--button"
    grow={false}
  >
    <EuiButtonIcon
      aria-label="Delete item"
      data-test-subj="transformGroupByEntryDeleteButton"
      iconType="cross"
      onClick={[Function]}
      size="s"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Transform: <GroupByLabelForm /> Terms aggregation 1`] = `
<EuiFlexGroup
  alignItems="center"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem
    className="transform__GroupByLabel--text"
  >
    <span
      className="eui-textTruncate"
      data-test-subj="transformGroupByEntryLabel"
    >
      the-group-by-agg-name
    </span>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--button"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downCenter"
      button={
        <EuiButtonIcon
          aria-label="Edit interval"
          data-test-subj="transformGroupByEntryEditButton"
          iconType="pencil"
          onClick={[Function]}
          size="s"
        />
      }
      closePopover={[Function]}
      display="inlineBlock"
      hasArrow={true}
      id="transformIntervalFormPopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="m"
    >
      <PopoverForm
        defaultData={
          Object {
            "agg": "terms",
            "aggName": "the-group-by-agg-name",
            "dropDownName": "the-group-by-drop-down-name",
            "field": "the-group-by-field",
          }
        }
        onChange={[Function]}
        options={Object {}}
        otherAggNames={Array []}
      />
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem
    className="transform__GroupByLabel--button"
    grow={false}
  >
    <EuiButtonIcon
      aria-label="Delete item"
      data-test-subj="transformGroupByEntryDeleteButton"
      iconType="cross"
      onClick={[Function]}
      size="s"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
